[project]
name = "pipedream"
version = "0.1.0"
description = "henpipegame"
authors = [
    {name = "Henry Chladil",email = "henry.ponco@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
